--- a/views/blog.hbs
+++ b/views/blog.hbs
@@ -1,7 +1,7 @@
 {{#if data.post}}
   <article>
     <h2>{{post.title}}</h2>
-    <img src="{{post.featureImage}}" alt="Feature Image">
+    <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fimages.unsplash.com%2Fphoto-1461749280684-dccba630e2f6%3Fixlib%3Drb-4.0.3%26ixid%3DM3wxMjA3fDB8MHxzZWFyY2h8Mnx8Y29kaW5nfGVufDB8fDB8fHww%26w%3D1000%26q%3D80&tbnid=FmphWmR7s96hlM&vet=12ahUKEwji0aCO8fz_AhVKFmIAHVwtBwgQMygAegUIARDjAQ..i&imgrefurl=https%3A%2F%2Funsplash.com%2Fs%2Fphotos%2Fcoding&docid=kCWKwglLTq1cAM&w=1000&h=668&q=coding%20pics&ved=2ahUKEwji0aCO8fz_AhVKFmIAHVwtBwgQMygAegUIARDjAQ" alt="Feature Image">
     {{#safeHTML post.body}}
     {{/safeHTML}}
     <strong>Category:</strong> {{post.category}}
