--- a/views/categories.hbs
+++ b/views/categories.hbs
@@ -1,24 +1,23 @@
-<div class="col-md-12">
-  <h2>Categories</h2>
-  <hr />
-  {{#unless categories}}
+{{#unless categories}} 
     <div class="col-md-12 text-center">
-      <strong>{{message}}</strong>
-    </div>
-  {{/unless}}
-  <div class="table-responsive">
+    <strong>{{message}}</strong>
+  </div>
+{{/unless}}
+<h2>Categories</h2>
+<hr />
+<div class="table-responsive">
   <table class="table">
     <thead>
       <tr>
-        <th>Category ID</th>
-        <th>Category Name</th>
+        <th scope="col">Category ID</th>
+        <th scope="col">Category Name</th>
       </tr>
     </thead>
     <tbody>
       {{#each categories}}
         <tr>
-          <td><a href="/posts?category={{this.id}}">{{this.id}}</a></td>
-          <td><a href="/posts?category={{this.id}}">{{this.name}}</a></td>
+          <td><a href="/posts?category={{id}}">{{id}}</a></td>
+          <td><a href="/posts?category={{id}}">{{category}}</a></td>
         </tr>
       {{/each}}
     </tbody>
