--- a/views/blog.hbs
+++ b/views/blog.hbs
@@ -1,7 +1,7 @@
 {{#if data.post}}
   <article>
     <h2>{{post.title}}</h2>
-    <img src="https://www.freepik.com/free-photos-vectors/coding" alt="Feature Image">
+      <img src="https://www.themuse.com/advice/10-free-classes-to-learn-to-code-if-you-have-absolutely-no-idea-where-to-start" alt="feature Image" style="width:100%" />
     {{#safeHTML post.body}}
     {{/safeHTML}}
     <strong>Category:</strong> {{post.category}}
