--- a/views/404.hbs
+++ b/views/404.hbs
@@ -1,1 +1,6 @@
-https://www.themuse.com/advice/10-free-classes-to-learn-to-code-if-you-have-absolutely-no-idea-where-to-start
+
+
+  <img srchttps://www.themuse.com/advice/10-free-classes-to-learn-to-code-if-you-have-absolutely-no-idea-where-to-start
+" alt="feature Image" style="width:100%" />
+
+
