--- a/views/blog.hbs
+++ b/views/blog.hbs
@@ -1,7 +1,7 @@
 {{#if data.post}}
   <article>
     <h2>{{post.title}}</h2>
-      <img src="https://www.themuse.com/advice/10-free-classes-to-learn-to-code-if-you-have-absolutely-no-idea-where-to-start" alt="feature Image" style="width:100%" />
+      <img src="https://www.reddit.com/r/ultrawidemasterrace/comments/wfvfx9/gave_219_a_shot_for_budget_coding_setup_and_its/" alt="feature Image" style="width:100%" />
     {{#safeHTML post.body}}
     {{/safeHTML}}
     <strong>Category:</strong> {{post.category}}
