--- a/views/404.hbs
+++ b/views/404.hbs
@@ -1,6 +1,5 @@
 
 
-  <img srchttps://www.themuse.com/advice/10-free-classes-to-learn-to-code-if-you-have-absolutely-no-idea-where-to-start
-" alt="feature Image" style="width:100%" />
+  <img src="https://www.reddit.com/r/setups/comments/chmnzy/portable_coding_station/" alt="feature Image" style="width:100%" />
 
 
