--- a/views/blog.hbs
+++ b/views/blog.hbs
@@ -1,33 +1,40 @@
-{{#if data.post}}
-  <article>
-    <h2>{{post.title}}</h2>
-      <img src="https://www.reddit.com/r/ultrawidemasterrace/comments/wfvfx9/gave_219_a_shot_for_budget_coding_setup_and_its/" alt="feature Image" style="width:100%" />
-    {{#safeHTML post.body}}
-    {{/safeHTML}}
-    <strong>Category:</strong> {{post.category}}
-    <strong>Last Updated:</strong> {{post.postdate}}
-  </article>
-{{else}}
-  <div class="col-md-12 text-center">
-    <h2>{{data.message}}</h2>
-    <p>Please try another Post / Category</p>
-  </div>
-{{/if}}
+<div class="row">
+  <section class="main col-md-9">
+    {{#if data.posts}}
+      <article>
+        <h2><strong>{{data.post.title}}</strong></h2>
+        <img src="{{data.post.featureImage}}" alt="feature Image" style="width:100%" />
+        <br /><br />
+        {{#safeHTML data.post.body}}{{/safeHTML}}
+        <br /><br />
+        <strong>Category:</strong> {{data.post.category}}<br />
+        <strong>Last Updated:</strong> {{#formatDate data.post.postDate}}{{/formatDate}}
+      </article>
+    {{else}}
+      <div class="col-md-12 text-center">
+        <h2>{{message}}</h2>
+      </div>
+    {{/if}}
+  </section>
 
-{{#if data.posts}}
-  <h4>Posts</h4>
-  <ul>
-    {{#each data.posts}}
-      <li><a href="/blog/{{this.id}}?category={{../viewingCategory}}">{{this.title}}</a></li>
-    {{/each}}
-  </ul>
-{{/if}}
+  <aside class="col-md-3">
+    <br /><br />
+    {{#if data.posts}}
+      <h4>Posts</h4>
+      <ul class="list-group">
+        {{#each data.posts}}
+          <a href="/blog/{{id}}?category={{../viewingCategory}}" class="list-group-item">{{title}}</a>
+        {{/each}}
+      </ul>
+    {{/if}}
 
-{{#if data.categories}}
-  <h4>Categories</h4>
-  <ul>
-    {{#each data.categories}}
-      <li><a href="/blog?category={{this.id}}">{{this.name}}</a></li>
-    {{/each}}
-  </ul>
-{{/if}}
+    {{#if data.categories}}
+      <h4>Categories</h4>
+      <ul class="list-group">
+        {{#each data.categories}}
+          <a href="/blog?category={{id}}" class="list-group-item">{{category}}</a>
+        {{/each}}
+      </ul>
+    {{/if}}
+  </aside>
+</div>
