--- a/views/posts.hbs
+++ b/views/posts.hbs
@@ -7,27 +7,32 @@
     </div>
   {{/unless}}
 
-<div class="table-responsive">
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Post ID</th>
-        <th>Title</th>
-        <th>Post Date</th>
-        <th>Category</th>
-        <th>Published</th>
-      </tr>
-    </thead>
-    <tbody>
-      {{#each posts}}
+  <div class="table-responsive">
+    <table class="table">
+      <thead>
         <tr>
-          <td>{{this.id}}</td>
-          <td>{{this.title}}</td>
-          <td>{{this.date}}</td>
-          <td><a href="/posts?category={{this.category}}">{{this.category}}</a></td>
-          <td>{{this.published}}</td>
+          <th>Post ID</th>
+          <th>Title</th>
+          <th>Post Date</th>
+          <th>Category</th>
+          <th>Published</th>
+          <th></th> <!-- New column for the "remove" link -->
         </tr>
-      {{/each}}
-    </tbody>
-  </table>
+      </thead>
+      <tbody>
+        {{#each posts}}
+          <tr>
+            <td>{{this.id}}</td>
+            <td>{{this.title}}</td>
+            <td>{{this.date}}</td>
+            <td><a href="/posts?category={{this.category}}">{{this.category}}</a></td>
+            <td>{{this.published}}</td>
+            <td>
+              <a href="/posts/delete/{{this.id}}" class="btn btn-danger">Remove</a>
+            </td> <!-- "Remove" link in a new column -->
+          </tr>
+        {{/each}}
+      </tbody>
+    </table>
+  </div>
 </div>
