--- a/views/addcategory.hbs
+++ b/views/addcategory.hbs
@@ -1,22 +1,11 @@
-<div class="row">
-    <div class="col-md-12">
-        <h2>Add Category</h2>
-        <a href="/categories/add" class="btn btn-success pull-right">Add Category</a>
-        <br />
-        <form method="post" action="/categories/add">
-            <fieldset>
-                <legend>Category:</legend>
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="form-group">
-                            <label for="category">Category:</label>
-                            <input class="form-control" id="category" name="category" type="text" autofocus />
-                        </div>
-                    </div>
-                </div>
-            </fieldset>
-            <hr />
-            <button type="submit" class="btn btn-primary pull-right">Add Category</button><br /><br /><br />
-        </form>
-    </div>
+<h2>Add Category</h2>
+<br />
+<form method="post" action="/categories/add">
+<div class="form-group">
+<label for="category">Category</label>
+<input type="text" class="form-control" id="category" name="category">
+</div><hr />
+<input type="submit" class="btn btn-primary pull-right" value="Add Category" />
+</form>
 </div>
+</html>
