--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -22,7 +22,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <span class="WEB322 - Nikhila Sharma" href="#">WEB322 - Assignment Template</span>
+          <span class="WEB322 - Nikhila Sharma" href="#">WEB322 - Nikhila</span>
         </div>
     
         <!-- Collect the nav links, forms, and other content for toggling -->
