--- a/views/categories.hbs
+++ b/views/categories.hbs
@@ -1,37 +1,36 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Categories</title>
-</head>
-<body>
-    <h2>Categories <a href="/categories/add" class="btn btn-success pull-right">Add Category</a></h2>
+<div class="row">
+  <div class="col-md-12">
+    <div class="controller">
+      <h2>Categories</h2>
+      <button class="overriden"><a href="/categories/add" class="btn btn-success pull-right">Add Category</a></button>
+    </div>
+    
     <hr />
     <div class="table-responsive">
-        <table class="table">
-            <thead>
-                <tr>
-                    <th scope="col">Category ID</th>
-                    <th scope="col">Category Name</th>
-                </tr>
-            </thead>
-            {{#if categories}} 
-            <tbody>
-                {{#each categories}}
-                <tr>
-                    <td><a href="/posts?category={{id}}">{{id}}</a></td>
-                    <td><a href="/posts?category={{id}}">{{category}}</a></td>
-                    <td><a href="categories/delete/{{id}}" class="btn btn-danger">Remove</a></td>
-                </tr>
-                {{/each}}
-            </tbody>
-            {{else}}
-            <tbody>
-                <tr>
-                    <td colspan="3" class="text-center">{{message}}</td>
-                </tr>
-            </tbody>
-            {{/if}}
-        </table>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Category ID</th>
+            <th>Category Name</th>
+          </tr>
+        </thead>
+          <tbody>
+            {{#each categories}}
+            <tr>
+              <td><a href="/posts?category={{this.id}}">{{this.id}}</a></td>
+              <td><a href="/posts?category={{this.id}}">{{this.category}}</a></td>
+              <td><a class="btn btn-danger" href="categories/delete/{{this.id}}">remove</a></td>
+            </tr>
+            
+            {{/each}}
+          </tbody>
+      </table>
+
     </div>
-</body>
-</html>
+    {{#unless posts}}
+        <div class="col-md-12 text-center">
+        <strong>{{message}}</strong>
+        </div>
+  {{/unless}}
+  </div>
+</div>
