--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,1 +1,1 @@
- <img src="https://www.reddit.com/r/setups/comments/chmnzy/portable_coding_station/" alt="feature Image" style="width:100%" />
+ <img src="https://www.pixelstalk.net/wp-content/uploads/2016/07/3840x2160-Images-Free-Download.jpg" alt="feature Image" style="width:100%" />
