--- a/views/about.hbs
+++ b/views/about.hbs
@@ -3,17 +3,15 @@
         <section class="main col-md-9">
           <article>
           <h2>About</h2>
-          <p>About Me</p>
-          <p>I'm currently studying computer programming and have a keen interest in the fashion industry. Although my academic focus lies in programming and technology, my passion for fashion drives me to explore opportunities where these two fields intersect.</p>
-          <p>Originating from India, I bring a unique perspective and cultural influence to my work. I believe that combining my programming skills with a deep understanding of the fashion industry can lead to innovative solutions and advancements in areas such as e-commerce, fashion analytics, or digital marketing.</p>
-          <p>As I continue my studies, I'm actively seeking ways to bridge the gap between programming and fashion. I'm immersing myself in fashion-related projects, participating in design competitions, and collaborating with fellow fashion enthusiasts to broaden my knowledge and skills in this field.</p>
-          <p>My goal is to leverage my programming expertise to contribute to the growth and transformation of the fashion industry. Whether it's developing cutting-edge fashion-related applications, optimizing supply chain management systems, or enhancing the online shopping experience, I'm excited about the potential for technology to revolutionize the fashion world.</p>
-          <p>Through this blog, I aim to share my journey of exploring the intersection of computer programming and fashion. Join me as we delve into exciting projects, discuss emerging trends, and explore how technology can shape the future of the fashion industry.</p>
-           </article>
+          <p>
+            I have a diverse range of hobbies that keep me entertained and engaged. One of my greatest passions is cricket, a sport that captivates me with its strategic gameplay and exhilarating moments. Whether it's watching a thrilling match or playing with friends, cricket never fails to ignite my competitive spirit. Another hobby of mine is following UFC (Ultimate Fighting Championship). The mix of skill, technique, and raw athleticism in mixed martial arts is simply captivating. I enjoy witnessing the intense battles between fighters and staying up-to-date with the latest events and matchups. Lastly, I have a deep love for movies. From action-packed blockbusters to thought-provoking dramas, I appreciate the power of storytelling through the cinematic medium. Exploring different genres and immersing myself in captivating narratives is a source of great joy and inspiration in my life.
+          </p>
+          </article>
         </section>
         <aside class="col-md-3">
-          <h2>Coming Soon...</h2>
-          <p>Stay tuned for the future updates.</p>
+          <h2>To be Continued...</h2>
+          <p>Why don't scientists trust atoms?
+            Because they make up everything!</p>
         </aside>
       </div>
-    
+   
