--- a/views/addcategory.hbs
+++ b/views/addcategory.hbs
@@ -1,39 +1,18 @@
 
-    <div class="container" style="padding-top: 60px">
-      <div class="row">
-        <div class="row">
-          <div class="col-md-12">
-            <h2>Add Category</h2>
+{{#content "title"}}
+Add Category
+{{/content}}
 
-            <br />
+{{#content "header"}}
+<h2>Add Category</h2>
+{{/content}}
 
-            <form
-              method="post"
-              action="/categories/add"
-            >
-              <fieldset>
-                      <label for="category">Category:</label>
-                      <input
-                        class="form-control"
-                        id="category"
-                        name="category"
-                        type="text"
-                        autofocus
-                      />
-                    </div>
-                  </div>
-                </div>
-              <hr />
-
-              <input
-                type="submit"
-                class="btn btn-primary pull-right"
-                value="Add Category"
-              /><br /><br /><br />
-            </form>
-          </div>
-        </div>
-      </div>
+{{#content "body"}}
+<form action="/categories/add" method="post">
+    <div class="form-group">
+        <label for="category">Category:</label>
+        <input type="text" name="category" id="category" class="form-control" autofocus required>
     </div>
-
-
+    <button type="submit" class="btn btn-primary">Add Category</button>
+</form>
+{{/content}}
